--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,13 @@ body {
   height: 400vh;
   overflow-x: hidden;
 }
+@media (max-width: 768px) {
+  body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+  }
+}
 :root {
   --icons: translateY(10px);
   --smooth: transform 1s ease-in-out 0ms;
