--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,9 @@ body {
   height: 400vh;
   overflow-x: hidden;
 }
-@media (max-width: 150px) {
+@media (max-width: 768px) {
   body {
-    height: 100vh;
+    width: 100vw;
   }
 }
 :root {
