--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
 }
 @media (max-width: 768px) {
    body {
-    height: 100vh;
+    height: calc(768px - 400vh);
     overflow: hidden;
  } 
 } 
