--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ nav {
   width: 100%;
   height: 25%;
   background-color: var(--color1);
+  position: fixed;
 }
 #welcome-section {
   color: var(--color3);
