--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ nav {
   color: white;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
 }
 #presentation {
   display: flex;
