--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav {
   width: 100%;
   height: 25%;
   background-color: var(--color1);
-  position: fixed;
+  position: absolute;
 }
 #welcome-section {
   color: var(--color3);
@@ -67,7 +67,7 @@ nav {
   color: white;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-  position: fixed;
+  position: absolute;
 }
 #presentation {
   display: flex;
