--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,12 @@ body {
   height: 400vh;
   overflow-x: hidden;
 }
-
+@media (max-width: 500px) {
+  body {
+    height: 400vh;
+    overflow-x: hidden;
+  }
+}
 :root {
   --icons: translateY(10px);
   --smooth: transform 1s ease-in-out 0ms;
