--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,8 @@ body {
   body {
     transform: scale(1);
   }
+  #navbar {
+    display: none;
 }
 @media only screen and (max-width: 960px) {
   
