--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
   overflow-x: hidden;
 }
 
-@media only screen and (max-width: 375px) {
+@media screen and (max-width: 375px) {
   body {
     transform: scale(1);
   }
@@ -88,10 +88,10 @@ body {
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media screen and (max-width: 960px) {
   
 }
-@media only screen and (max-width: 1600px) {
+@media screen and (max-width: 1600px) {
   
 }
 
