--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
   overflow-x: hidden;
 }
 
-@media screen and (max-width: 375px) {
+@media (max-width: 375px) {
   body {
     transform: scale(1);
   }
