--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,11 @@ body {
   height: 400vh;
   overflow-x: hidden;
 }
-
+@media screen (max-width: 375) {
+  #navbar {
+    displayL none;
+  }
+}
 :root {
   --icons: translateY(10px);
   --smooth: transform 1s ease-in-out 0ms;
