--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,12 @@ body {
     display: none;
   }
 }
+
+@media only screen and (max-width: 960px) {
+  body {
+    transform: scale(1);
+  }
+}
 :root {
   --icons: translateY(10px);
   --smooth: transform 1s ease-in-out 0ms;
