--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,9 @@ body {
   #navbar {
     display: none;
   }
+  .projects {
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (max-width: 960px) {
