--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,8 @@ body {
   .projects {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    
 }
 
 @media only screen and (max-width: 960px) {
