--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 50%;
-    
+  }
 }
 
 @media only screen and (max-width: 960px) {
