--- a/styles.css
+++ b/styles.css
@@ -88,13 +88,20 @@ body {
   #presentation {
     display: none;
   }
+  .divider {
+    display: none;
+  }
   .projects {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
   }
+main {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  }
 }
-
 @media only screen and (max-width: 960px) {
   body {
     transform: scale(1);
