--- a/styles.css
+++ b/styles.css
@@ -335,4 +335,8 @@ p {
   background-color: var(--color3);
   margin-right: 100px;
 }
-
+@media (max-width: 768px) {
+  #navbar {
+    display: none;
+  }
+}
