--- a/styles.css
+++ b/styles.css
@@ -336,14 +336,67 @@ p {
   margin-right: 100px;
 }
 @media (max-width: 768px) {
+  nav > ul {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  nav > ul > li {
+    padding: 10px;
+    right: 0;
+  }
   #navbar {
-    display: none;
+    position: static;
   }
   #welcome-section {
+    top: 100px;
+  }
+  #profession {
+    top: 110px;
+  }
+  .projects {
+    padding-left: 20px;
+    padding-top: 50px;
+  }
+  .one {
+    width: 90%;
+    margin-left: 5%;
+    right: 0;
+  }
+  .two,
+  .three,
+  .four {
+    width: 90%;
+    margin-left: 5%;
+    right: 0;
+  }
+  .two > p > a,
+  .three > p > a,
+  .four > p > a {
+    font-size: 18px;
+  }
+  .public-address > h1 {
+    top: 50px;
+    font-size: 50px;
+  }
+  .public-address > h3 {
+    top: 70px;
+  }
+  .social-icons {
     top: 150px;
   }
-  #presentation {
-    width: 30%;
-    padding: auto;
+  .dividing-strip {
+    top: 304px;
+  }
+  .copyright {
+    bottom: -374px;
+    right: 52px;
+  }
+  .communication {
+    height: 25%;
+  }
+  .divider {
+    bottom: 10%;
+    margin-right: 0;
   }
 }
