--- a/styles.css
+++ b/styles.css
@@ -355,8 +355,9 @@ p {
     top: 110px;
   }
   .projects {
-    padding: 20px;
+    padding-left: 20px;
     padding-top: 50px;
+    text-align: center;
   }
   .one {
     width: 90%;
