--- a/styles.css
+++ b/styles.css
@@ -353,19 +353,16 @@ p {
   }
   #welcome-section {
     top: 100px;
-    font-size: 25px;
-    text-align: left;
   }
   #profession {
     top: 110px;
   }
   .projects {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 40px;
+    justify-content: left;
+    align-items: left;
     padding-top: 20px;
-    text-align: center;
+    text-align: left;
   }
   .one {
     width: 90%;
