--- a/styles.css
+++ b/styles.css
@@ -358,11 +358,9 @@ p {
     top: 110px;
   }
   .projects {
-    display: flex;
-    justify-content: right;
-    align-items: right;
     padding-top: 20px;
-    text-align: right;
+    padding-left: 5px;
+    font-size: 20px;
   }
   .one {
     width: 90%;
