--- a/styles.css
+++ b/styles.css
@@ -362,6 +362,7 @@ p {
     padding-left: 5px;
     font-size: 20px;
     text-align: right;
+    justify-content: justify;
   }
   .one {
     width: 90%;
