--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,8 @@ p {
     top: 110px;
   }
   .projects {
+    display: flex;
+    justify-content: justify;
     padding-top: 20px;
     padding-left: 5px;
     font-size: 20px;
