--- a/styles.css
+++ b/styles.css
@@ -359,6 +359,8 @@ p {
   }
   .projects {
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: justify;
     padding-top: 20px;
     padding-left: 5px;
