--- a/styles.css
+++ b/styles.css
@@ -360,6 +360,7 @@ p {
   #presentation {
     width: 100%;
     padding-right: 10px;
+    padding-left: 10px;
   }
   .projects {
     padding-top: 20px;
