--- a/styles.css
+++ b/styles.css
@@ -364,9 +364,8 @@ p {
   }
   .projects {
     padding-top: 20px;
-    padding-left: 5px;
-    font-size: 20px;
-    text-align: right;
+    font-size: 30px;
+    text-align: center;
   }
   .one {
     width: 90%;
