--- a/styles.css
+++ b/styles.css
@@ -365,6 +365,7 @@ p {
     padding-top: 40px;
     font-size: 30px;
     text-align: center;
+    justify-content: center;
   }
   .one {
     width: 90%;
