--- a/styles.css
+++ b/styles.css
@@ -361,6 +361,7 @@ p {
     width: 100%;
   }
   .projects {
+    height: 30%;
     padding-left: 80px;
     padding-top: 30px;
     font-size: 25px;
