--- a/styles.css
+++ b/styles.css
@@ -369,6 +369,16 @@ p {
     justify-content: center;
   }
 
+  main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    gap: 5px;
+  }
+
   .one {
     width: 90%;
     margin-left: 5%;
