--- a/styles.css
+++ b/styles.css
@@ -376,9 +376,35 @@ p {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    gap: 5px;
+    gap: 30px;
   }
-
+  .wiki-img {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 40%;
+    height: 30%;
+    justify-content: center;
+    align-items: center;
+  }
+  .book-img {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 40%;
+    height: 15%;
+    justify-content: center;
+    align-items: center;
+  }
+  .product-img {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 25%;
+    height: 10%;
+    justify-content: center;
+    align-items: center;
+  }
   .one {
     width: 90%;
     margin-left: 5%;
