--- a/styles.css
+++ b/styles.css
@@ -379,8 +379,8 @@ p {
     gap: 30px;
   }
   .tribute-page {
-    position: relative;
-    bottom: 40%;
+    position: absolute;
+    bottom: 100px;
   }
   .wiki-img {
     display: flex;
