--- a/styles.css
+++ b/styles.css
@@ -349,10 +349,10 @@ p {
     position: static;
   }
   .name {
-    height: 20%;
+    height: 25%;
   }
   #welcome-section {
-    top: 100px;
+    top: 70px;
   }
   #profession {
     top: 140px;
@@ -362,13 +362,12 @@ p {
   }
   .projects {
     height: 70%;
-    padding-left: 80px;
+    padding-left: 90px;
     padding-top: 30px;
     font-size: 25px;
     text-align: center;
     justify-content: center;
   }
-
   main {
     display: flex;
     flex-direction: column;
@@ -379,14 +378,14 @@ p {
     gap: 30px;
   }
   .tribute-page {
-    position: static;
-    margin-top: 20px;
+    position: relative;
+    top: -950px;
   }
   .wiki-img {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    width: 40%;
+    width: 90%;
     height: 30%;
     justify-content: center;
     align-items: center;
@@ -447,7 +446,6 @@ p {
     height: 25%;
   }
   .divider {
-    bottom: 45%;
-    margin-right: 0;
+    bottom: 40%;
   }
 }
