--- a/styles.css
+++ b/styles.css
@@ -338,12 +338,14 @@ p {
 @media (max-width: 768px) {
   nav > ul {
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
   }
   nav > ul > li {
     padding-bottom: 10px;
-    right: 0;
+    padding-top: 10px;
+    padding-left: 3px;
+    padding-right: 3px;
   }
   #navbar {
     position: fixed;
