--- a/styles.css
+++ b/styles.css
@@ -337,9 +337,10 @@ p {
 }
 @media (max-width: 768px) {
   nav > ul {
-    justify-content: center;
+    display: flex;
     flex-direction: row;
-    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: justify;
   }
   nav > ul > li {
     padding-bottom: 10px;
