--- a/styles.css
+++ b/styles.css
@@ -347,6 +347,9 @@ p {
     padding-bottom: 8px;
     padding-top: 10px;
   }
+  li > a {
+    font-size: 20px;
+  }
   #navbar {
     position: fixed;
   }
