--- a/styles.css
+++ b/styles.css
@@ -346,6 +346,7 @@ p {
   nav > ul > li {
     padding-bottom: 8px;
     padding-top: 10px;
+    padding-left: 1px;
   }
   li > a {
     font-size: 20px;
