--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,7 @@ p {
     padding-bottom: 10px;
     padding-top: 8px;
     padding-left: 3px;
+    margin: auto;
   }
   li > a {
     font-size: 20px;
